r476:    * Remove dh_testversion from example rules file, Closes: #99901

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.31) unstable; urgency=low
+
+  * Remove dh_testversion from example rules file, Closes: #99901
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  7 Jun 2001 20:24:39 -0400
+
 debhelper (3.0.30) unstable; urgency=low
 
   * dh_gencontrol: Added a documented interface for specifying substvars
