r477:    * Check that update-modules is present before running it, since modutils      is not essential. Closes: #100430

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.32) unstable; urgency=low
+
+  * Check that update-modules is present before running it, since modutils
+    is not essential. Closes: #100430
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 10 Jun 2001 15:13:51 -0400
+
 debhelper (3.0.31) unstable; urgency=low
 
   * Remove dh_testversion from example rules file, Closes: #99901
