r478:    * dh_gencontrol: Work around very strange hurd semantics      which allow "" to be an empty file. Closes: #100542

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.33) unstable; urgency=low
+
+  * dh_gencontrol: Work around very strange hurd semantics
+    which allow "" to be an empty file. Closes: #100542
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 11 Jun 2001 18:15:19 -0400
+
 debhelper (3.0.32) unstable; urgency=low
 
   * Check that update-modules is present before running it, since modutils
