r479:    * Unimportant spelling fix. Closes: #100666

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.34) unstable; urgency=low
+
+  * Unimportant spelling fix. Closes: #100666
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 14 Jun 2001 12:30:28 -0400
+
 debhelper (3.0.33) unstable; urgency=low
 
   * dh_gencontrol: Work around very strange hurd semantics
