r480:    * Revert change of 3.0.30. This broke too much stuff. Maybe I'll      change it in debhelper v4..

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.35) unstable; urgency=low
+
+  * Revert change of 3.0.30. This broke too much stuff. Maybe I'll
+    change it in debhelper v4..
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 18 Jun 2001 13:56:35 -0400
+
 debhelper (3.0.34) unstable; urgency=low
 
   * Unimportant spelling fix. Closes: #100666
