r481:    * Whoops, I forgot to revert dh_perl too. Closes: #101477

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.36) unstable; urgency=low
+
+  * Whoops, I forgot to revert dh_perl too. Closes: #101477
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 19 Jun 2001 14:10:24 -0400
+
 debhelper (3.0.35) unstable; urgency=low
 
   * Revert change of 3.0.30. This broke too much stuff. Maybe I'll
