--- a/debhelper.pod
+++ b/debhelper.pod
@@ -194,7 +194,7 @@ you have a package that builds many binary packages, you will need to also
 use the -p flag to specify which binary package the debhelper program will
 act on.
 
-=head2 Debhelper compatability levels
+=head2 Debhelper compatibility levels
 
 From time to time, major non-backwards-compatible changes need to be made
 to debhelper, to keep it clean and well-designed as needs change and its
@@ -208,7 +208,7 @@ debhelper should be used. There are currently 3:
 =item V1
 
 Setting DH_COMPAT=1 (or leaving it unset) causes debhelper to act in
-compatability mode. It will use debian/tmp as the package tree
+compatibility mode. It will use debian/tmp as the package tree
 directory for the first binary package listed in the control file, while using
 debian/<package> for all other packages listed in the control file.
 This mode is deprecated.
@@ -282,7 +282,7 @@ that modifies files on the build system.
 
 =item DH_COMPAT
 
-Specifies what compatability level debhelper should run at. See above.
+Specifies what compatibility level debhelper should run at. See above.
 
 =item DH_NO_ACT
 
