--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.37) unstable; urgency=low
+
+  * Spellpatch, Closes: #101553
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 20 Jun 2001 22:03:57 -0400
+
 debhelper (3.0.36) unstable; urgency=low
 
   * Whoops, I forgot to revert dh_perl too. Closes: #101477
