r483:    * fixed doc bog, Closes: #102130

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -175,7 +175,7 @@ it in a perl script. If you would like to embed it into a perl script, here
 is one way to do that (note that I made sure that $1, $2, etc are set with
 the set command):
 
-  my $temp="set -e\\nset -- @ARGV\\n" . << 'EOF';
+  my $temp="set -e\nset -- @ARGV\n" . << 'EOF';
   #DEBHELPER#
   EOF
   system ($temp) / 256 == 0
