--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.38) unstable; urgency=low
+
+  * fixed doc bog, Closes: #102130
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 24 Jun 2001 21:08:15 -0400
+
 debhelper (3.0.37) unstable; urgency=low
 
   * Spellpatch, Closes: #101553
