r484:    * dh_compress: Don't compress .bz2 files, Closes: #102935

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.39) unstable; urgency=low
+
+  * dh_compress: Don't compress .bz2 files, Closes: #102935
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 30 Jun 2001 20:39:17 -0400
+
 debhelper (3.0.38) unstable; urgency=low
 
   * fixed doc bog, Closes: #102130
