--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.40) unstable; urgency=low
+
+  * Typo, Closes: #104405
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 11 Jul 2001 22:57:41 -0400
+
 debhelper (3.0.39) unstable; urgency=low
 
   * dh_compress: Don't compress .bz2 files, Closes: #102935
