r486:    * Clean up old substvars.debhelper files, although debhelper doesn't      generate them now, it used to and they may still be lurking in build      trees. Closes: #106514    * Fixed a typo. Closes: #106532

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (3.0.41) unstable; urgency=low
+
+  * Clean up old substvars.debhelper files, although debhelper doesn't
+    generate them now, it used to and they may still be lurking in build
+    trees. Closes: #106514
+  * Fixed a typo. Closes: #106532
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 25 Jul 2001 17:04:21 -0400
+
 debhelper (3.0.40) unstable; urgency=low
 
   * Typo, Closes: #104405
