r488:    * dh_perl: made it use doit commands so -v mode works. Yeah, uglier.      Closes: #92826      Also some indentation fixes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.43) unstable; urgency=low
+
+  * dh_perl: made it use doit commands so -v mode works. Yeah, uglier.
+    Closes: #92826
+    Also some indentation fixes. 
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 24 Aug 2001 15:34:55 -0400
+
 debhelper (3.0.42) unstable; urgency=low
 
   * dh_movefiles: Typo, Closes: #106532
