r489:    * Added dh_strip to rules.multi2, and removed .TODO.swp. Closes: #110418

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.44) unstable; urgency=low
+
+  * Added dh_strip to rules.multi2, and removed .TODO.swp. Closes: #110418
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 28 Aug 2001 15:22:41 -0400
+
 debhelper (3.0.43) unstable; urgency=low
 
   * dh_perl: made it use doit commands so -v mode works. Yeah, uglier.
