r491:    * dh_installxfonts: Do not specify /usr/sbin/ paths; that should be in      the path and dpkg enforces it. Closes: #112385

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.45) unstable; urgency=low
+
+  * dh_installxfonts: Do not specify /usr/sbin/ paths; that should be in
+    the path and dpkg enforces it. Closes: #112385
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 16 Sep 2001 18:48:59 -0400
+
 debhelper (3.0.44) unstable; urgency=low
 
   * Added dh_strip to rules.multi2, and removed .TODO.swp. Closes: #110418
