--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.46) unstable; urgency=low
+
+  * Typo, Closes: #114135
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  4 Oct 2001 19:39:34 -0400
+
 debhelper (3.0.45) unstable; urgency=low
 
   * dh_installxfonts: Do not specify /usr/sbin/ paths; that should be in
