r493:    * dh_installman: documented translated man page support, and made it work      properly. It was not stripping the language part from the installed      filenames.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.47) unstable; urgency=low
+
+  * dh_installman: documented translated man page support, and made it work
+    properly. It was not stripping the language part from the installed
+    filenames.
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  9 Oct 2001 15:16:18 -0400
+
 debhelper (3.0.46) unstable; urgency=low
 
   * Typo, Closes: #114135
