r494:    * Added .zip and .jar to list of things to compress (Closes: #115735),      and modified docs (Closes: #115733).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.48) unstable; urgency=low
+
+  * Added .zip and .jar to list of things to compress (Closes: #115735),
+    and modified docs (Closes: #115733).
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 15 Oct 2001 19:01:43 -0400
+
 debhelper (3.0.47) unstable; urgency=low
 
   * dh_installman: documented translated man page support, and made it work
