r495:    * dh_undocumented: check for existing uncompressed man pages. Closes: #87972    * Optimized dh_installdeb conffile finding. Closes: #119035    * dh_installdeb: changed the #!/bin/sh -e to set -e on a new line. Whether      this additional bloat is worth it to make it easier for people to sh -x      a script by hand is debatable either way, I guess. Closes: #119046    * Added a check for duplicated package stanzas in debian/control,      Closes: #118805

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -91,7 +91,8 @@ Act on all architecture independent packages.
 
 =item B<->I<ppackage>, B<--package=>I<package>
 
-Act on the package named "package".
+Act on the package named "package". This option may be specified multiple
+times to make debhelper operate on a given set of packages.
 
 =item B<-s>, B<--same-arch>
 
