r496:    * Man page cleanups, Closes: #119335

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -4,7 +4,7 @@ debhelper - the debhelper tool suite
 
 =head1 SYNOPSIS
 
-  dh_* [-v] [-a] [-i] [-s] [--no-act] [-ppackage] [-Npackage] [-Ptmpdir]
+B<dh_>I<*> [B<-v>] [B<-a>] [B<-i>] [B<-s>] [B<--no-act>] [B<-ppackage>] [B<-Npackage] [-Ptmpdir>]
 
 =head1 DESCRIPTION
 
