--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.51) unstable; urgency=low
+
+  * Man page cleanups, Closes: #119335
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Nov 2001 21:04:15 -0500
+
 debhelper (3.0.50) unstable; urgency=low
 
   * dh_undocumented: check for existing uncompressed man pages. Closes: #87972
