r497: this and that

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.0.52) unstable; urgency=low
+
+  * Typo, Closes: #122679
+UNRELEASED
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  6 Dec 2001 11:58:52 -0500
+
 debhelper (3.0.51) unstable; urgency=low
 
   * Man page cleanups, Closes: #119335
