--- a/doc/TODO
+++ b/doc/TODO
@@ -67,3 +67,7 @@ Deprecated:
   catches on, make it emit a warning, and then wait for it to go away.
 * dh_testversion. Only mildly deprecated right now. Make it emit a warning
   by jan 2002, and remove as soon as nothing uses it.
+* dh_installxaw. xaw replacments are dying, nothing uses it validly (bugs
+  filed on the few packages that use it by accident). Make it omit a
+  warning by jan 2002 and remove as soon as nothing uses it, or by april
+  2002.
