--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 debhelper (3.0.52) unstable; urgency=low
 
   * Typo, Closes: #122679
-UNRELEASED
+  * Export dirname from Dh_Lib, and related cleanup, Closes: #125770
+  * Document dirname, basename in PROGRAMMING
 
  -- Joey Hess <joeyh@debian.org>  Thu,  6 Dec 2001 11:58:52 -0500
 
