r499:    * dh_strip: run file using a safe pipe open, that will not expose any weird      characters in filenames to a shell. Closes: #126491    * fixed dh_testdir man page

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.0.53) unstable; urgency=low
+
+  * dh_strip: run file using a safe pipe open, that will not expose any weird
+    characters in filenames to a shell. Closes: #126491
+  * fixed dh_testdir man page
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 26 Dec 2001 21:15:42 -0500
+
 debhelper (3.0.52) unstable; urgency=low
 
   * Typo, Closes: #122679
