r500:    * Added a version to the perl build dep, Closes: #126677

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.0.54) unstable; urgency=low
+
+  * Added a version to the perl build dep, Closes: #126677
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 27 Dec 2001 20:39:46 -0500
+
 debhelper (3.0.53) unstable; urgency=low
 
   * dh_strip: run file using a safe pipe open, that will not expose any weird
