r501:    * Began work on v4 support (and thus the large version number jump), and it      is only for the very brave right now since I will unhesitatingly break      compatability in v4 mode as I'm developing it. Currently, updating to v4      mode will only make dh_makeshlibs -V generate shared library deps that      omit the debian part of the version number. The reasoning behind this      change is that the debian revision should not typically break binary      compatability, that existing use of -V is causing too tight versioned      deps, and that if you do need to include the debian revision for some      reason, you can always write it out by hand. Closes: #101497    * dh_testversion is deprecated -- use build deps instead. A warning message      is now output when it runs. Currently used by: 381 packages.    * dh_installxaw is deprecated -- xaw-wrappers in no longer in the      distribution. A warning message is now output when it runs. Currently used      by: 3 packages (bugs filed).    * Added referneces to menufile in dh_installmenu man page. Closes: #127978      (dh_make is not a part of debhelper, if you want it changed, file a bug on      dh-make.)

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -241,6 +241,20 @@ Every file in etc/ is automatically flagged as a conffile by dh_installdeb.
 
 =back
 
+=item V4
+
+This mode is still under development, and its behavior may change at any
+time. Currently, setting DH_COMPAT=4 does everything V4 does, plus:
+
+=over 8
+
+=item -
+
+dh_makeshlibs -V will not include the debian part of the version number in
+the generated dependancy line in the shlibs file.
+
+=back
+
 =back
 
 =head2 Doc directory symlinks
