r502:    * Fixed programmer's documentation of DOINDEP and DOARCH, Closes: #128546    * Fixed dh_builddeb SYNOPSIS, Closes: #128548

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.4.1) unstable; urgency=low
+
+  * Fixed programmer's documentation of DOINDEP and DOARCH, Closes: #128546
+  * Fixed dh_builddeb SYNOPSIS, Closes: #128548
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 10 Jan 2002 13:49:37 -0500
+
 debhelper (3.4.0) unstable; urgency=low
 
   * Began work on v4 support (and thus the large version number jump), and it
