r505:    * Improved dh_installxfonts some more:      - Better indenting of generated code.      - Better ordering of generated code (minor fix).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (3.4.3) unstable; urgency=low
+
+  * Improved dh_installxfonts some more:
+    - Better indenting of generated code.
+    - Better ordering of generated code (minor fix).
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 26 Jan 2002 23:09:59 -0500
+
 debhelper (3.4.2) unstable; urgency=low
 
   * dh_installman: more documentation about the .TH line. Closes: #129205
