--- a/doc/TODO
+++ b/doc/TODO
@@ -58,10 +58,7 @@ Wishlist items:
 
 v4:
 
-These items are part of v4 already:
-
-* dhmakeshlibs -V omits the debian part of the version number from the
-  generated dependancy in the shlibs file
+See debhelper's man page for what's implemented so far.
 
 These items are planned:
 
