r507:    * dh_installxfonts: separate multiple commands with \n so sed doesn't get      upset. Closes: #131322

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.4.5) unstable; urgency=low
+
+  * dh_installxfonts: separate multiple commands with \n so sed doesn't get
+    upset. Closes: #131322
+
+ -- Joey Hess <joey@kitenet.net>  Tue, 29 Jan 2002 18:58:58 -0500
+
 debhelper (3.4.4) unstable; urgency=low
 
   * Introduced the debian/compat file. This is the new, preferred way to say
