r508:    * Typo, Closes: #132454    * Ignore leading/trailing whitespace in DH_OPTIONS, Closes: #132645

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.4.6) unstable; urgency=low
+
+  * Typo, Closes: #132454
+  * Ignore leading/trailing whitespace in DH_OPTIONS, Closes: #132645
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  5 Feb 2002 17:33:57 -0500
+
 debhelper (3.4.5) unstable; urgency=low
 
   * dh_installxfonts: separate multiple commands with \n so sed doesn't get
