r509:    * dh_perl: don't gripe if there is no substvar file. Closes: #133140

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.7) unstable; urgency=low
+
+  * dh_perl: don't gripe if there is no substvar file. Closes: #133140
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  9 Feb 2002 17:37:32 -0500
+
 debhelper (3.4.6) unstable; urgency=low
 
   * Typo, Closes: #132454
