r511:    * dh_movefiles: Allow for deeper --sourcedir. Closes: #131363

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.9) unstable; urgency=low
+
+  * dh_movefiles: Allow for deeper --sourcedir. Closes: #131363
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 20 Feb 2002 16:37:43 -0500
+
 debhelper (3.4.8) unstable; urgency=low
 
   * Thanks to Benjamin Drieu <benj@debian.org>, dh_installdocs -X now works.
