r512:    * Fixed dh_movefiles. Closes: #135479, #135459

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.10) unstable; urgency=low
+
+  * Fixed dh_movefiles. Closes: #135479, #135459
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 24 Feb 2002 12:25:32 -0500
+
 debhelper (3.4.9) unstable; urgency=low
 
   * dh_movefiles: Allow for deeper --sourcedir. Closes: #131363
