--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.11) unstable; urgency=low
+
+  * Fixed dh_installdocs and dh_installexamples to support multiple -X's.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 28 Feb 2002 13:02:35 -0500
+
 debhelper (3.4.10) unstable; urgency=low
 
   * Fixed dh_movefiles. Closes: #135479, #135459
