r514:    * Fix to #99169 was accidentually reverted in 3.0.42; reinstated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.12) unstable; urgency=low
+
+  * Fix to #99169 was accidentually reverted in 3.0.42; reinstated.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 16 Mar 2002 23:31:46 -0500
+
 debhelper (3.4.11) unstable; urgency=low
 
   * Fixed dh_installdocs and dh_installexamples to support multiple -X's.
