--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (3.4.13) unstable; urgency=low
+
+UNRE
+  * Typo, Closes: #139176
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 20 Mar 2002 11:25:36 -0500
+
 debhelper (3.4.12) unstable; urgency=low
 
   * Fix to #99169 was accidentually reverted in 3.0.42; reinstated.
