--- a/doc/TODO
+++ b/doc/TODO
@@ -61,6 +61,8 @@ See debhelper's man page for what's implemented so far.
 These items are planned:
 
 * Maybe make dh_fixperms make all files in bin/ dirs +x. (#119039)
+* Make dh_link find existing, non-policy-comformant symlinks, and correct
+  them.
 
 Deprecated:
 
