r516:    * Typo, Closes: #139176    * Fixed dh_md5sums conffile excluding/including.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 debhelper (3.4.13) unstable; urgency=low
 
-UNRE
   * Typo, Closes: #139176
+  * Fixed dh_md5sums conffile excluding/including.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 20 Mar 2002 11:25:36 -0500
 
