r517:    * Fixed an uninitialized value warning, Closes: #141729

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (3.4.14) unstable; urgency=low
+
+  * Fixed an uninitialized value warning, Closes: #141729
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  8 Apr 2002 11:45:02 -0400
+
 debhelper (3.4.13) unstable; urgency=low
 
   * Typo, Closes: #139176
