--- a/debhelper.pod
+++ b/debhelper.pod
@@ -185,11 +185,13 @@ the set command):
 =head2 Automatic generation of miscellaneous dependencies.
 
 Some debhelper commands may make the generated package need to depend on
-some other packages. For example, if you use L<dh_installdebconf(1)>, you'r
+some other packages. For example, if you use L<dh_installdebconf(1)>, your
 package will generally need to depend on debconf. Or if you use
 L<dh_installxfonts(1)>, your package will generally need to depend on a
 particular version of xutils. Keeping track of these miscellaneous
-dependencies can be annoying, so debhelper offers a way to automate it.
+dependencies can be annoying since they are dependant on how debhelper does
+things, so debhelper offers a way to automate it.
+
 All commands of this type, besides documenting what dependencies may be
 needed on their man pages, will automatically generate a substvar called
 ${misc:Depends}. If you put that token into your debian/control file, it
@@ -223,9 +225,9 @@ introduced. You tell debhelper which compatability level it should use, and
 it modifies its behavior in various ways.
 
 You tell debhelper what compatability level to use by writing a number to
-debian/compat. For example, to turn on V3 mode:
+debian/compat. For example, to turn on V4 mode:
 
-  % echo 3 > debian/compat
+  % echo 4 > debian/compat
 
 These are the available compatablity levels:
 
@@ -246,8 +248,7 @@ as the package tree directory for every package that is built.
 
 =item V3
 
-This is the reccommended mode of operation. It does everything V2 does,
-plus:
+This mode works like V2, with the following additions:
 
 =over 8
 
@@ -268,8 +269,8 @@ Every file in etc/ is automatically flagged as a conffile by dh_installdeb.
 
 =item V4
 
-This mode is still under development, and its behavior may change at any
-time. Currently, it does everything V3 does, plus:
+This is the reccommended mode of operation. It does everything V3 does,
+plus:
 
 =over 8
 
@@ -282,6 +283,15 @@ the generated dependancy line in the shlibs file.
 
 dh_installinit uses the new invoke-rc.d program in its generated maintainer
 scripts. (This may later be rolled back into V3).
+
+=item -
+
+dh_fixperms will make all files in bin/ directories and in etc/init.d 
+executable.
+
+=item -
+
+dh_link will correct existing links to conform with policy.
 
 =back
 
