r519:    * dh_installdebconf: allow parameters after -- to go to      debconf-mergetemplate.    * dh_installman: don't whine about zero-length man pages in .so conversion.    * Forgot to export filedoublearray, Closes: #142784

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.0.1) unstable; urgency=low
+
+  * dh_installdebconf: allow parameters after -- to go to
+    debconf-mergetemplate.
+  * dh_installman: don't whine about zero-length man pages in .so conversion.
+  * Forgot to export filedoublearray, Closes: #142784
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 12 Apr 2002 23:22:15 -0400
+
 debhelper (4.0.0) unstable; urgency=low
 
   * dh_movefiles has long been a sore point in debhelper. Inherited
