r520:    * dh_install: delay globbing until after destintations have been found.      Closes: #143234

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.0.2) unstable; urgency=low
+
+  * dh_install: delay globbing until after destintations have been found.
+    Closes: #143234
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 Apr 2002 21:25:32 -0400
+
 debhelper (4.0.1) unstable; urgency=low
 
   * dh_installdebconf: allow parameters after -- to go to
